# calcium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
depend/glad/: CMakeLists.txt
depend/glad/include/glad/: glad.h
depend/glad/src/: glad.c
depend/stb_image/: CMakeLists.txt
src/: backend.hpp  buffer_element.hpp  buffer_layout.cpp  buffer_layout.hpp  calcium.hpp  callbacks.hpp  colour.cpp  colour.hpp  context.cpp  context.hpp  context_create_info.hpp  debug_call.hpp  extension_details.hpp  glfw_utils.cpp  glfw_utils.hpp  glfw_window.cpp  glfw_window.hpp  instance.cpp  instance.hpp  instrumentation_timer.cpp  instrumentation_timer.hpp  instrumentor.cpp  instrumentor.hpp  key_callback.hpp  key_code.hpp  mesh.cpp  mesh.hpp  mesh_create_info.hpp  mesh_data.hpp  render_pass.cpp  render_pass.hpp  render_pass_create_info.hpp  render_target.hpp  shader.cpp  shader.hpp  shader_create_info.hpp  shader_data_type.cpp  shader_data_type.hpp  shader_details.cpp  shader_details.hpp  (+18 more)
src/calcium/: backend.hpp  calcium.hpp  render_api.hpp
src/opengl/: opengl_check.cpp  opengl_check.hpp  opengl_compile_options.cpp  opengl_compile_options.hpp  opengl_context.cpp  opengl_context.hpp  opengl_error.cpp  opengl_error.hpp  opengl_instance.cpp  opengl_instance.hpp  opengl_mesh.cpp  opengl_mesh.hpp  opengl_render_pass.cpp  opengl_render_pass.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_shader_utils.cpp  opengl_shader_utils.hpp  opengl_texture.cpp  opengl_texture.hpp  opengl_texture_array.cpp  opengl_texture_array.hpp  opengl_uniform_buffer.cpp  opengl_uniform_buffer.hpp  opengl_window.cpp  opengl_window.hpp
src/vulkan/: vulkan_allocator.cpp  vulkan_allocator.hpp  vulkan_buffer_utils.cpp  vulkan_buffer_utils.hpp  vulkan_check.cpp  vulkan_check.hpp  vulkan_command_buffer_utils.cpp  vulkan_command_buffer_utils.hpp  vulkan_command_pool.cpp  vulkan_command_pool.hpp  vulkan_constants.hpp  vulkan_context.cpp  vulkan_context.hpp  vulkan_context_data.hpp  vulkan_debug_messenger.cpp  vulkan_debug_messenger.hpp  vulkan_depth_buffer.cpp  vulkan_depth_buffer.hpp  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.hpp  vulkan_descriptor_set_layout.cpp  vulkan_descriptor_set_layout.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_image_utils.cpp  vulkan_image_utils.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_mesh.cpp  vulkan_mesh.hpp  vulkan_physical_device.cpp  vulkan_physical_device.hpp  vulkan_pipeline_layout.cpp  vulkan_pipeline_layout.hpp  vulkan_queue_family_indices.cpp  vulkan_queue_family_indices.hpp  vulkan_render_command_buffers.cpp  vulkan_render_command_buffers.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  (+24 more)
test/: CMakeLists.txt
test/res/shaders/: shader.frag.glsl.spv  shader.vert.glsl.spv
test/src/: main.cpp
test/src/shaders/: noinput.frag.glsl  noinput.vert.glsl  shader.frag.glsl  shader.vert.glsl
